--- a/Angular/QuizGame/Frontend/src/app/components/game/game-over/game-over.component.html
+++ b/Angular/QuizGame/Frontend/src/app/components/game/game-over/game-over.component.html
@@ -1,5 +1,5 @@
 <p class="title">GAME OVER</p>
-<p class="statistics">You answered {{ numberOfCorrectlyAnsweredQuestions }} questions correctly.</p>
+<p class="statistics">You answered {{ numberOfCorrectAnswers }} questions correctly</p>
 <div class="restartContainer">
   <p class="description">Do you want to try again?</p>
   <button class="restart" (click)="restart.emit()">RESTART</button>
